# goodreads_telegram_bot

./: Cargo.toml  Procfile  README.md
src/: goodreads.rs  main.rs
